# lsh

./: .env.example  .gitignore  .npmignore  .ralphrc  AGENTS.md  AGENT_PROMPT.md  CLAUDE.md  CONSTANTS_MIGRATION.md  DASHBOARD-QUICKSTART.md  DEPLOYMENT.md  Dockerfile  Dockerfile.test  FLOW.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MONITORING_SETUP.md  Makefile  POSIX_MISSING_FEATURES.md  README-LAUNCHER.md  README.md  REFACTORING_SUMMARY.md  SAAS_IMPLEMENTATION_SUMMARY.md  SECRETS_CHEATSHEET.txt  SECRETS_GUIDE.md  SECRETS_QUICK_REFERENCE.md  SECURITY.md  SHELL_SCRIPT_EXECUTION.md  SUPABASE_INTEGRATION.md  ZSH_COMPATIBILITY.md  ZSH_SUPERSET_ANALYSIS.md  app.ts  babel.config.js  build.js  claude-progress.txt  demo-interactive-mode.js  demo-lsh.js  demo-shell-script-execution.js  demo-zsh-compatibility.js  deploy.sh  (+36 more)
Formula/: lsh.rb
lpy/: .envrc  .envrc_example  .gitignore  .ptpython_history  README.md  build.py  model_checkpoint_1518.h5  model_checkpoint_1518.keras  mypy.ini  pyproject.toml  setup.py
lpy/config/: config.py
lpy/resources/: model.ipynb
lpy/resources/guruSearchUI/: .gitignore  README.md  guruSearchUI.c3pkg.json
lpy/resources/guruSearchUI/config/UiSdlGovSecurityConfig/: UiSdlGovSecurityConfig.json
lpy/resources/guruSearchUI/resources/: release4_eng_workflow_v3.ipynb
lpy/resources/guruSearchUI/resources/eng/: bootstrap_guru_search.sh  clean_v8_directories.sh  release4_eng_workflow.ipynb
lpy/resources/guruSearchUI/src/remix/: GenAiVisualizationBase.c3typ  GenAiVisualizationBase.py  Genai.ChatBot.c3typ  Genai.ChatBot.js  Genai.Query.Result.c3typ  Genai.Query.Result.js  MockVisualizationGenerator.c3typ  MockVisualizationGenerator.js  MockVisualizationKind.c3typ
lpy/resources/guruSearchUI/test/: test_CheckTestRunner.js
lpy/resources/guruSearchUI/test/js-rhino/: test_CheckJsRhinoTestRunner.js
lpy/resources/mvn/: build.gradle  platform.build.gradle
lpy/src/: lpy.code-workspace
lpy/src/lpy/: lpy.py
lpy/src/lpy/app/: main.c  main.cpp  main.cpp.dep  main.html  main.py
lpy/src/lpy/c3/: __init__.py  api.py  bundler.py  c3.py  config.py  file.py  maven.py  vscode.py  watch.py
lpy/src/lpy/c3/env/: env.py
lpy/src/lpy/c3/maven_dependencies/: api-all-2.1.6.pom  api-ldap-client-all-2.1.6.pom  applicationinsights-web-1.0.8.pom  aws-java-sdk-1.12.638.pom  aws-java-sdk-eks-1.12.638.pom  azure-mgmt-datalake-analytics-1.0.0-beta1.5.pom  azure-mgmt-datalake-store-1.0.0-beta1.5.pom  cosmosdb-19.0.7285.pom  databricks-23.0.8770.0.pom  db2jcc4-4.24.92.pom  gax-2.19.1.pom  gcs-connector-hadoop3-2.2.9.pom  gheat-1.0.0.pom  google-cloud-aiplatform-1.0.1.pom  google-cloud-bigtable-2.19.2.pom  google-cloud-storage-2.12.0.pom  googlebigquery-22.0.8257.0.pom  h2-2.2.220.pom  hazelcast-5.3.6.pom  hubspot-18.0.6886.pom  iot-service-client-1.20.0.pom  jamm-0.3.4.pom  jamm4-0.4.0-c3.2.pom  jna-platform-4.5.2.pom  jqwik-1.7.3.pom  jsoup-1.14.2.pom  kafka-clients-3.6.0.pom  lucene-suggest-8.11.2.pom  micrometer-registry-prometheus-1.11.0.pom  mongosql-auth-1.1.0.pom  mssql-jdbc-6.4.0.jre8.pom  ngdbc-2.16.14.pom  ojdbc8-18.3.pom  opensaml-core-4.0.1.pom  opensaml-saml-api-4.0.1.pom  opensaml-saml-impl-4.0.1.pom  opensaml-security-api-4.0.1.pom  opensaml-xmlsec-api-4.0.1.pom  opensaml-xmlsec-impl-4.0.1.pom  pgvector-0.1.3.pom  (+12 more)
lpy/src/lpy/c3/pkg/: __init__.py  pkg.py
lpy/src/lpy/c3metrics/: MasterList2Json.py  TransformLinkedIn.py  main.py  openair_metrics.py
lpy/src/lpy/c3metrics/C3CommunityMetrics/: C3CommunityPost.py  C3CommunityReply.py
lpy/src/lpy/c3metrics/GithubMetrics/: GithubPR.py  GithubPRComments.py  GithubStats.py
lpy/src/lpy/c3metrics/JiraMetrics/: JiraTicketAssignment.py  JiraTicketComment.py  JiraTicketReported.py
lpy/src/lpy/c3metrics/SEFeedback/: readme.md  se_reviewers.py
lpy/src/lpy/code/: code.py
lpy/src/lpy/config/: config.py
lpy/src/lpy/gcloud/: gcloud.py
lpy/src/lpy/model/: model.py
lpy/src/lpy/repo/: __init__.py  repo.py
lpy/src/lpy/save/: save.py
lpy/src/lpy/scripts/: create_test_from_js_source.py  create_test_from_py_source.py  edit_md_to_html.py  test_for_conflict.py  test_process_pr.py
lpy/src/lpy/util/: __init__.py  util.py
(+1803 files in other folders)
