[tool.poetry]
name = "lpy"
version = "0.0.0"
description = "Python dependency management and packaging made easy."
authors = ["lefv"]
maintainers = [
    "lefv <luis@lefv.io>"
]
license = "MIT"
readme = "README.md"
homepage = "https://www.lefv.io"
repository = "https://github.com/gwicho38/lsh"
documentation = "https://github.com/gwicho38/lsh/README.md"
keywords = ["cli", "shell", "lpy", "lsh"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
Changelog = "https://github.com/gwicho38/lsh/README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lpy = "lpy.app.main:main"

[[tool.poetry.packages]]
include = "lpy/app/**/*"
from = "src"

[[tool.poetry.packages]]
include = "lpy/c3/**/*"
from = "src"
