[tool.poetry]
name = "lpy"
version = "0.0.6"
description = "Python dependency management and packaging made easy."
authors = ["lefv"]
maintainers = [
    "lefv <luis@lefv.io>"
]
license = "MIT"
readme = "README.md"
homepage = "https://www.lefv.io"
repository = "https://github.com/gwicho38/lsh"
documentation = "https://github.com/gwicho38/lsh/README.md"
keywords = ["cli", "shell", "lpy", "lsh"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Only include cythonized files in final build
include = ["lpy/**/*.so"]  # ignored in VCS, so we need to be explicit
exclude = ["lpy/**/*.py"]
build = "build.py"

[tool.poetry.urls]
Changelog = "https://github.com/gwicho38/lsh/README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
ipython = "^8.23.0"
typer = "^0.12.3"
click = "^8.1.7"
pandoc = "^2.3"
ptpython = "^3.0.26"
setuptools = "^69.5.1"
cython = "^3.0.10"
watchdog = "^4.0.0"
openai = "^1.30.2"
gitpython = "^3.1.43"
pygithub = "^2.3.0"

numpy = "^1.26.4"
tensorflow = "^2.16.1"
flask = "^3.0.3"
keras = "^3.3.3"
scikit-learn = "^1.5.0"
urllib3 = "^2.2.2"
[tool.poetry.dev-dependencies]
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
cython = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.2.0",  "Cython", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lpy = "lpy.app.main:main"

[[tool.poetry.packages]]
include = "lpy/app/**/*"
from = "src"

[[tool.poetry.packages]]
include = "lpy/c3/**/*"
from = "src"
